--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
     "antd": "^5.22.1",
+    "aos": "^2.3.4",
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "encrypt-storage": "^2.13.3",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
