--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "aos": "^2.3.4",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "encrypt-storage": "^2.13.3",
+    "lucide-react": "^0.468.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "some-library": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
