--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@ant-design/icons": "^5.5.1",
     "antd": "^5.22.1",
     "aos": "^2.3.4",
+    "apexcharts": "^4.3.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "encrypt-storage": "^2.13.3",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.468.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.7.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
